--- a/index.html
+++ b/index.html
@@ -434,17 +434,17 @@
                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">20:45</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🏨 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">入住 OMO5 熊本</a></h3>
-                        </div>
-                        <p class="event-desc">返回飯店休息</p>
-                        <a href="https://maps.google.com/?q=OMO5熊本" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-hotel">住宿</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">21:45</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🏨 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">入住 OMO5 熊本</a></h3>
+                         </div>
+                         <p class="event-desc">返回飯店休息</p>
+                         <a href="https://maps.google.com/?q=OMO5熊本" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-hotel">住宿</span>
+                     </div>
+                 </div>
             </div>
         </div>
 
@@ -494,7 +494,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約50分鐘 → 大津道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約45-60分鐘 → 大津道之驛</div>
                 </div>
 
                 <div class="event">
@@ -510,7 +510,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約25分鐘 → 阿蘇道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → 阿蘇道之驛</div>
                 </div>
 
                 <div class="event">
@@ -553,7 +553,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約20分鐘 → 阿蘇山上</div>
+                     <div class="transport-line drive">🚗 開車 約15-25分鐘 → 阿蘇山上</div>
                 </div>
 
                 <div class="event">
@@ -569,7 +569,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約10分鐘 → 草千里</div>
+                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 草千里</div>
                 </div>
 
                 <div class="event">
@@ -585,7 +585,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約1.5小時 → 高千穗</div>
+                     <div class="transport-line drive">🚗 開車 約1.5-2小時 → 高千穗</div>
                 </div>
 
                 <div class="event">
@@ -848,7 +848,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約40分鐘（從黑川）→ 九重夢大吊橋</div>
+                     <div class="transport-line drive">🚗 開車 約40-50分鐘（從黑川）→ 九重夢大吊橋</div>
                 </div>
 
                 <div class="event">
@@ -864,7 +864,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約1小時 → 別府</div>
+                     <div class="transport-line drive">🚗 開車 約1-1.5小時 → 別府</div>
                 </div>
 
                  <div class="event">
@@ -886,7 +886,7 @@
                  </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約15分鐘 → 別府纜車站</div>
+                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 別府纜車站</div>
                 </div>
 
                  <div class="event">
@@ -931,7 +931,7 @@
                  </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約15分鐘 → 別府市區</div>
+                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 別府市區</div>
                 </div>
 
                 <div class="event">
@@ -996,7 +996,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約40分鐘（從別府）→ 九州自然動物園</div>
+                     <div class="transport-line drive">🚗 開車 約40-50分鐘（從別府）→ 九州自然動物園</div>
                 </div>
 
                 <div class="event">
@@ -1012,7 +1012,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約20分鐘 → 由布院</div>
+                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → 由布院</div>
                 </div>
 
                 <div class="event">
@@ -1131,7 +1131,7 @@
                 </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約1小時 → 浮羽道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約1-1.5小時 → 浮羽道之驛</div>
                  </div>
 
                  <div class="event">
@@ -1153,7 +1153,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約40分鐘 → 太宰府</div>
+                     <div class="transport-line drive">🚗 開車 約40-50分鐘 → 太宰府</div>
                  </div>
 
                  <div class="event">
@@ -1170,7 +1170,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約30分鐘 → 福岡還車點</div>
+                     <div class="transport-line drive">🚗 開車 約30-40分鐘 → 福岡還車點</div>
                  </div>
 
                  <div class="event">
