--- a/index.html
+++ b/index.html
@@ -1579,37 +1579,97 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">09:00 - 14:00</div>
+                     <div class="event-time">09:00 - 10:00</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🏨 整理行李、退房</h3>
+                         </div>
+                         <p class="event-desc">10:00 辦理退房手續，將行李寄放飯店</p>
+                         <span class="tag tag-hotel">退房</span>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約3分鐘 → JR博多城</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">10:00 - 12:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏙️ <a href="https://maps.google.com/?q=キャナルシティ博多" target="_blank">福岡市區自由行</a></h3>
+                            <h3>🎮 <a href="https://maps.google.com/?q=ポケモンセンター+博多" target="_blank">寶可夢中心 & JR博多城</a></h3>
                         </div>
-                        <p class="event-desc">推薦景點：博多運河城、天神地下街、中洲屋台</p>
-                        <a href="https://maps.google.com/?q=キャナルシティ博多" target="_blank" class="map-link">📍 運河城</a>
-                        <a href="https://maps.google.com/?q=天神地下街" target="_blank" class="map-link">📍 天神地下街</a>
-                        <span class="tag tag-attraction">景點</span>
+                        <p class="event-desc">逛寶可夢中心福岡店與 JR博多城購物</p>
+                        <a href="https://maps.google.com/?q=ポケモンセンター+博多" target="_blank" class="map-link">📍 寶可夢中心</a>
+                        <a href="https://maps.google.com/?q=JR博多シティ" target="_blank" class="map-link">📍 JR博多城</a>
                         <span class="tag tag-shopping">購物</span>
+                        <div class="reservation-info">
+                            🎮 <strong>寶可夢中心福岡：</strong><br>
+                            📍 位於 JR博多城 AMU PLAZA 博多 5F<br>
+                            🕐 營業時間：10:00～20:00<br>
+                            📅 定休日：不定休<br><br>
+                            🏬 <strong>JR博多城：</strong><br>
+                            AMU PLAZA 博多、博多阪急百貨等複合商場
+                        </div>
                     </div>
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 市區移動</div>
+                    <div class="transport-line walk">🚶 博多城內移動</div>
                 </div>
 
                 <div class="event">
                     <div class="event-time">12:00 - 13:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍜 <a href="https://maps.google.com/?q=一蘭拉麵総本店" target="_blank">午餐：一蘭拉麵總本店 或 博多一風堂</a></h3>
+                            <h3>🍜 <a href="https://maps.google.com/?q=JR博多シティ+レストラン" target="_blank">午餐：博多城美食街</a></h3>
                         </div>
-                        <p class="event-desc">經典博多豚骨拉麵，運河城或天神地下街均有分店</p>
-                        <a href="https://maps.google.com/?q=一蘭拉麵総本店" target="_blank" class="map-link">📍 一蘭總本店</a>
-                        <a href="https://maps.google.com/?q=博多一風堂" target="_blank" class="map-link">📍 一風堂</a>
+                        <p class="event-desc">在 JR博多城 10F 美食街或 9F 餐廳樓層用餐</p>
+                        <a href="https://maps.google.com/?q=JR博多シティ+レストラン" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
                         <div class="reservation-info">
-                            🕐 營業時間：10:00～翌日5:00（一蘭總本店24小時）<br>
-                            📅 定休日：無休
+                            🍽️ 推薦選擇：<br>
+                            • 10F くうてん（美食街）- 多種日式料理<br>
+                            • 9F ひびき - 和洋中各式餐廳<br>
+                            • 博多拉麵、壽司、天婦羅等選擇豐富
                         </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 博多城內移動</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">13:00 - 16:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🛍️ <a href="https://maps.google.com/?q=JR博多シティ" target="_blank">繼續逛 JR博多城</a></h3>
+                        </div>
+                        <p class="event-desc">最後採買與購物，享受博多城各樓層特色商店</p>
+                        <a href="https://maps.google.com/?q=JR博多シティ" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-shopping">購物</span>
+                        <div class="reservation-info">
+                            🛍️ 推薦樓層：<br>
+                            • B1F - 土產伴手禮<br>
+                            • 1-8F - AMU PLAZA 時尚服飾<br>
+                            • 博多阪急百貨 - 精品與美妝
+                        </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約3分鐘回飯店取行李</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">16:00 - 16:30</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🧳 回飯店取行李</h3>
+                        </div>
+                        <p class="event-desc">取回寄放在東橫INN的行李</p>
+                        <span class="tag tag-hotel">取行李</span>
                     </div>
                 </div>
 
@@ -1618,7 +1678,7 @@
                 </div>
 
                  <div class="event">
-                     <div class="event-time">14:00</div>
+                     <div class="event-time">17:00</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🚇 <a href="https://maps.google.com/?q=福岡空港" target="_blank">前往福岡機場</a></h3>
@@ -1643,18 +1703,20 @@
              <div class="notes">
                  <h4>注意事項</h4>
                  <ul>
-                     <li>福岡機場離市區很近，地下鐵約5分鐘</li>
-                     <li>建議起飛前2小時抵達機場</li>
+                     <li>10:00 退房後將行李寄放飯店，輕鬆逛街</li>
+                     <li>寶可夢中心位於 JR博多城 AMU PLAZA 5F</li>
+                     <li>福岡機場離博多站很近，地下鐵約5分鐘</li>
+                     <li>建議起飛前2小時（17:00）抵達機場</li>
                  </ul>
              </div>
              <div class="budget-card">
                  <h4>💰 Day 7 預算估算（4人）</h4>
                  <table>
-                     <tr><td>🏙️ 市區購物（最後採買）</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
-                     <tr><td>🍜 午餐 一蘭/一風堂</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
+                     <tr><td>🎮 JR博多城購物（含寶可夢中心）</td><td>¥15,000 (約 NT$ 3,300)</td></tr>
+                     <tr><td>🍜 午餐 博多城美食街</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🚇 地下鐵往機場（4人）</td><td>¥1,040 (約 NT$ 230)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 3,530（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 4,850（不含住宿）</div>
              </div>
         </div>
 
